--- a/README
+++ b/README
@@ -2,6 +2,8 @@
 CS:APP Shell Lab
 ################
 
+refer guideline.pdf to know about project.
+
 Files:
 
 Makefile	# Compiles your shell program and runs the tests
